[project]
name = "img3lib"
version = "1.2.6"
description = "iOS Image3 lib"
authors = [
    {name = "Merculous",email = "24739823+Merculous@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylzss @ git+https://github.com/m1stadev/pylzss.git",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "asn1 (>=3.2.0,<4.0.0)",
    "binpatch @ git+https://github.com/merculous/pybinpatch.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
